# hash-sandbox

./: README.md  meson.build
src/: bernstein-hash.c  common.h  fiboat-hash.c  fibonacci-hash.c  flat-hash.c  hash-functions.h  meson.build  modulo-hash.c  oat-hash.c  xxhash-hash.c
tests/: meson.build  primes.h  test_hash.c  words.h
